# freeglut-cmake-starter

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  Timer.cpp  ansi_escapes.c  ansi_escapes.h  main.c  sw.c  sw.h
src/dir/: Makefile.linux  Makefile.mac  Makefile.win  fbo.cbp  fbo.dev  main.cpp
